namespace Infrastruktura;

class SystemObslugi {
    public SystemObslugi() {}

    public void Test() {Console.WriteLine("Test: SystemObslugi");}
}