namespace Platnosci;

class Platnosc {
    public Platnosc() {}

    public void Test() {Console.WriteLine("Test: Platnosc");}
}