namespace Produkty;

class Produkt {
    public Produkt() {}

    public void Test() {Console.WriteLine("Test: Produkt");}
}