namespace Zamowienia;

public enum StatusZamowienia {
    ZLOZONE,
    W_TRAKCIE_REALIZACJI,
    GOTOWE,
    DOSTARCZONE
}